@@ -1,3 +1,0 @@
-<?php
-
-$sql[]="UPDATE `{$dbprefix}acces` SET `page`='' WHERE `page`='planning/postes_cfg/lignes_sep.php';";
